--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.7.0",
+    "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.15",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
