--- a/package.json
+++ b/package.json
@@ -17,92 +17,92 @@
     ]
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@hookform/resolvers": "^3.3.2",
-    "@lottiefiles/react-lottie-player": "^3.5.4",
-    "@mui/material": "^6.1.2",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/table": "^2.0.40",
-    "@nextui-org/theme": "^2.2.11",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@mui/material": "^6.4.2",
+    "@nextui-org/system": "^2.4.6",
+    "@nextui-org/table": "^2.2.8",
+    "@nextui-org/theme": "^2.4.5",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "@tanstack/react-query": "^5.59.0",
-    "@tanstack/react-query-devtools": "^5.59.0",
-    "@tanstack/react-table": "^8.10.7",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/react-query": "^5.65.1",
+    "@tanstack/react-query-devtools": "^5.65.1",
+    "@tanstack/react-table": "^8.20.6",
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.7.0",
     "@vercel/analytics": "^1.4.1",
-    "autoprefixer": "^10.4.15",
-    "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^1.0.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^2.30.0",
-    "dropzone": "^6.0.0-beta.2",
+    "dropzone": "6.0.0-beta.2",
     "eslint": "8.48.0",
-    "eslint-config-next": "^14.0.1",
-    "framer-motion": "^11.11.1",
-    "kysely": "^0.27.4",
+    "eslint-config-next": "^14.2.23",
+    "framer-motion": "^11.18.2",
+    "kysely": "^0.27.5",
     "lucide-react": "^0.291.0",
-    "next": "^14.2.3",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.23",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
-    "postcss": "^8.4.28",
-    "react": "^18.2.0",
+    "postcss": "^8.5.1",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-colorful": "^5.6.1",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.9",
-    "react-hook-form": "^7.47.0",
-    "recharts": "^2.12.7",
-    "sharp": "^0.32.5",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.7.4",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.6"
+    "zod": "^3.24.1",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
-    "@types/react": "^18.3.9",
+    "@types/react": "^18.3.18",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "daisyui": "^4.12.13",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "daisyui": "^4.12.23",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "supabase": "^1.219.2"
+    "supabase": "^1.226.4"
   }
 }
